fix bug in db typo
