# docs/swagger.json
@@ -280,31 +280,6 @@
                 }
             }
         },
-        "/orders/mine": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Recupera la lista de órdenes asociadas al usuario autenticado",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "orders"
-                ],
-                "summary": "Obtener mis órdenes",
-                "responses": {
-                    "200": {
-                        "description": "Lista de órdenes obtenida con éxito"
-                    }
-                }
-            }
-        },
         "/orders/{id}": {
             "put": {
                 "security": [
@@ -438,7 +413,8 @@
             "required": [
                 "customer_id",
                 "pieces_count",
-                "service_type"
+                "service_type",
+                "weight"
             ],
             "properties": {
                 "customer_id": {
@@ -453,6 +429,9 @@
                 },
                 "service_type": {
                     "type": "string"
+                },
+                "weight": {
+                    "type": "number"
                 }
             }
         },
